Fix overflow issue --> Done

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,6 +7,10 @@
     margin: 0 auto;
   }
 
+  @media screen and (max-width: 768px) {
+    overflow: hidden;
+  }
+
   &__image {
     width: 65rem;
     height: auto;
