--- a/src/components/Subscription/Subscription.scss
+++ b/src/components/Subscription/Subscription.scss
@@ -30,6 +30,10 @@
       @media screen and (max-width: 768px) {
         width: 50%;
       }
+
+      @media screen and (max-width: 500px) {
+        width: 50%;
+      }
     }
 
     &__button {
